Add simple example of image-url

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,2 +1,4 @@
-%h1 Home#index
-%p Find me in app/views/home/index.haml
+#home
+  %h1 Home#index
+  %p Find me in app/views/home/index.haml
+  .cross
