--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -1,2 +1,18 @@
 @import compass/reset
+@import compass/css3
+@import compass/typography
+@import compass/utilities
 @import home
+
+body
+  background: #eee
+  font: 14pt "Lucida Grande"
+
+code
+  color: #999
+  font-family: Monaco
+
+h1
+  font:
+    size: 18px
+    weight: bold
