Add killer sprite demo

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -83,3 +83,11 @@ section
     +opacity(0.5)
   .somewhat-transparent
     +opacity(0.75)
+
+@import 'scenery/*.png'
+
+.demo-07
+  .sprite
+    height: 32px
+    width: 32px
+    +scenery-sprite(scenery)
