--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -52,5 +52,12 @@
           =image_tag 'disc-blue.png'
       %figcaption
         The icons to the right have 25%, 50% and 75% opacity
+    %section.demo-07
+      %h1 Sprites
+      %figure
+        .sprite
+      %figcaption
+        The hover effect is provided by a sprite that was built from individual
+        images by Compass.
     %footer
       Causes lightning talks, March 2, 2012
