Roll link into header

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,8 +1,9 @@
 #home
   %article
-    %h1.lightning Compass lightning talk
-    %p
-      %a(href="http://compass-style.org/")http://compass-style.org/
+    %h1.lightning
+      %a(href="http://compass-style.org/"
+         title="Compass CSS Authoring Framework") Compass
+      lightning talk
     %section
       %h1 The &ldquo;compass/reset&rdquo; module
       %figure
