--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -9,8 +9,10 @@ article
   +border-radius(10px)
 
 figcaption
+  color: #a88
   display: none
   float: right
+  font-family: courier
   width: 200px
 
 figure
