--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -8,6 +8,10 @@
       %h1 The &ldquo;compass/reset&rdquo; module
       %figure
         %p Exciting, isn't it?
+      %figcaption
+        Compass also provides a bunch of utility modules for things like layout,
+        grids, enumeration (dynamic style generation), color management and
+        other common tricks (eg clearfix).
     %section.demo-01
       %h1 Image via <code>image-url</code> helper
       %figure
