--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -37,7 +37,7 @@
       %h1 Gradients
       %figure
         .gradient
-          This element has a background gradient
+          Element with background gradient
     %section.demo-05
       %h1 CSS3 transitions
       %figure
