--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,7 @@
     /[if IE]
       =stylesheet_link_tag 'ie.css', :media => 'screen, projection'
     =yield :head
+    %title Compass lightning talk
   %body
     =yield
     =javascript_include_tag 'application'
